# advent-of-code-2023

day-1/: Cargo.toml
day-1/src/: main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs  test.rs
day-5/: Cargo.toml
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/src/: main.rs  test.rs
day-7/: Cargo.toml
day-7/src/: main.rs  test.rs
day-8/: Cargo.toml
day-8/src/: main.rs  test.rs
day-9/: Cargo.toml
day-9/src/: main.rs  test.rs
