[package]
name = "day-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
num-integer = "0.1.45"
rayon = "1.8.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
